--- a/Parks.html
+++ b/Parks.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./styles.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>National Parks</title>
   </head>
   <div class="nav">
     <a class="active" href="home.html">Home</a>
