--- a/Mountain.html
+++ b/Mountain.html
@@ -12,7 +12,8 @@
     <a href="Parks.html">Explore The Parks</a>
   </div>
   <body style="background-image: url(./images/mtn4.jpg)">
-    <select id="SelectMtn" size="">
+    <h1 style="color: black">Sky Above Earth Below</h1>
+    <select id="SelectMtn" size="" style="background-color: lightgreen">
       <option value="choose">Select Mountain</option>
     </select>
     <table id="MtnDisplay" style="font-size: larger">
