--- a/Parks.html
+++ b/Parks.html
@@ -12,14 +12,14 @@
     <a href="Mountain.html">Search Mountains</a>
   </div>
   <body style="background-color: burlywood">
-    <select id="locSelector">
+    <select id="locSelector" style="background-color: burlywood">
       <option value="choose">Search By State</option>
     </select>
-    <select id="typeSelector" style="align-items: right">
+    <select id="typeSelector" style="background-color: burlywood">
       <option value="choose">Park Type</option>
     </select>
-    <h3>National Parks!</h3>
-    <table id="ParkDisplayTbl">
+    <h1>Visit These Beautiful Parks!</h1>
+    <table id="ParkDisplayTbl" style="font-size: larger">
       <thead>
         <tr>
           <th>Name</th>
