--- a/Parks.html
+++ b/Parks.html
@@ -32,6 +32,6 @@
     </table>
     <script src="./scripts/locationData.js"></script>
     <script src="./scripts/parkTypeData.js"></script>
-    <script src="/scripts/nationalParkData.js"></script>
+    <script src="./scripts/nationalParkData.js"></script>
   </body>
 </html>
